# flotilla

./: Cargo.toml  LICENSE  README.md
src/: api.rs  config.rs  interface.rs  main.rs  session.rs
src/verbs/: edit.rs  fetch.rs  get.rs  list.rs  login.rs  logout.rs  mod.rs  setup.rs  verify.rs
