[package]
name = "flotilla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.12"
directories = "5.0.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
rust-ini = "0.20.0"
serde = "1.0.193"
serde_json = "1.0.108"
