[package]
name = "flotilla"
version = "0.1.0"
edition = "2021"
description = "A command line tool for interacting with the Flotilla API"
license = "MIT"
authors = ["Joshua Vander Hook <hello@Jodavaho.io>"]
repository = "https://github.com/jodavaho/flotilla"
readme = "README.md"
homepage = "https://hfopt.jodavaho.io"
copyright = "Copyright (c) 2023 Joshua Vander Hook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argp = "0.3.0"
chrono = "0.4.31"
directories = "5.0.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
rust-ini = "0.20.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
similar = { version = "2.4.0", features = ["serde"] }
